# coop-rl

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/skills/deep-residual-networks/: SKILL.md
.claude/skills/deep-residual-networks/references/: implementation.md
.github/instructions/: coop-rl-conventions.instructions.md  python-editing-scope.instructions.md  python-functional-first.instructions.md
.github/skills/deep-residual-networks/: SKILL.md
.github/skills/deep-residual-networks/references/: implementation.md
app/: train.py  train_dopamine.py  train_gym_dqn.py  train_reverb.py
app/configs/dopamine/: atari.py  classic_control.py
app/configs/reverb/: atari.py
apps/: train.py  train_gym_dqn.py
coop_rl/: agents_dqn.py  agents_pg.py  base_types.py  buffer.py  buffers.py  collectors.py  config.py  environment.py  evaluators.py  loss.py  losses.py  members.py  misc.py  miscellaneous.py  networks.py  old_abstract_agent.py  storage.py  utils.py  workers.py
coop_rl/agents/: dqn.py  dreamer.py  mdqn.py  rainbow.py
coop_rl/configs/: atari.py  atari_dqn.py  atari_dreamer.py  atari_mdqn.py  atari_rainbow.py  classic_control.py  classic_control_dqn.py  dqn_cartpole.py
coop_rl/dreamer/: heads.py  nets.py  rssm.py  transform.py
coop_rl/metrics/: statistics_instance.py
coop_rl/networks/: base.py  distributions.py  heads.py  inputs.py  postprocessors.py  torso.py
coop_rl/replay_memory/: circular_replay_buffer.py  prioritized_replay_buffer.py
coop_rl/workers/: actors.py  auxiliary.py  collectors.py  evaluators.py  exchange_actors.py  trainers.py
notebooks/: atari_eval.ipynb  check_atari.ipynb  dreamer_atari.ipynb  test_gymnasium.ipynb
scripts/: install_godot_rl.sh  regen_mlagents_protos.sh
src/coop_rl/: __init__.py  __main__.py  buffers.py  loss.py  multistep.py  utils.py
src/coop_rl/agents/: dqn.py  dreamer.py  mdqn.py  rainbow.py
src/coop_rl/base/: base_types.py  buffers.py  distributions.py  environment.py  loss.py  multistep.py  utils.py
src/coop_rl/cli/: __init__.py  eval_godot_bridge.py  train.py
src/coop_rl/configs/: __init__.py  atari_dqn.py  atari_dreamer.py  atari_mdqn.py  atari_rainbow.py  dqn_atari.py  dreamer_atari.py  dreamer_godot.py  dreamer_unity.py  mdqn_atari.py  rainbow_atari.py  registry.py
src/coop_rl/dreamer/: __init__.py  ninjax.py  opt.py  rssm.py  utils.py
src/coop_rl/dreamer/envs/: __init__.py  atari.py
src/coop_rl/networks/: __init__.py  base.py  distributions.py  dreamer_nn.py  dueling.py  epsilon_greedy.py  heads.py  inputs.py  layers.py  postprocessors.py  resnet.py  rssm.py  torso.py  utils.py
src/coop_rl/runtime/: __init__.py  training.py
src/coop_rl/workers/: __init__.py  auxiliary.py  collectors.py  trainers.py
