[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coop-rl"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pyarrow",
    "numpy",
    "pandas",
    "gymnasium[atari]",
    "matplotlib",
    "seaborn",
    "ipykernel",
    "ipywidgets",
    "tensorflow",
    "tensorboard",
    "tensorflow-probability[tf]",
    "jax[cuda12]",
    "optax @ git+https://github.com/google-deepmind/optax.git",
    "chex",
    "flax",
    "brax>=0.9.0",
    "distrax @ git+https://github.com/google-deepmind/distrax.git",
    "flashbax @ git+https://github.com/instadeepai/flashbax.git",
    "rlax",
    "clu",
    "ml-collections",
    "ray[default]",
    "elements>=3.19.1",
    "einops",
]

[project.scripts]
coop-rl-train = "coop_rl.cli.train:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/coop_rl"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
]

