[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coop-rl"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pyarrow",
    "numpy",
    "pandas",
    "gymnasium[atari]",
    "gymnasium[other]",
    "matplotlib",
    "seaborn",
    "ipykernel",
    "ipywidgets",
    "setuptools==69.5.1",
    "tensorboard",
    "jax[cuda12]",
    "optax",
    "chex",
    "flax",
    "brax>=0.9.0",
    "flashbax",
    "rlax",
    "clu",
    "ml-collections",
    "ray[default]",
    "elements>=3.19.1",
    "einops",
    "ruff",
    "jupyter_client",
    "mlagents-envs>=0.28.0",
]

[project.scripts]
coop-rl-train = "coop_rl.cli.train:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/coop_rl"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
]

